2007-09-12  Danilo Šegan  <danilo@gnome.org>

	* index.py (show_release): Add xmltemplate.
	* templates/release-xml.tmpl: Added.
	* dispatcher.py: Fix xml handling.

2007-09-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: evolution, evolution-data-server,
	evolution-exchange, gtkhtml branched for 2.20.

2007-09-11  Danilo Šegan  <danilo@gnome.org>

	* compare-releases.py: Support more releases.

2007-09-11  Danilo Šegan  <danilo@gnome.org>

	* compare-releases.py: Added script to compare releases.
	Support more languages.

2007-09-10  Daniel Nylander <po@danielnylander.se>

	* translation-teams.xml.in: Updated Swedish information.

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* templates/index.tmpl: Added possibility to view gettext and intltool
	version in HTML comments inside home page.

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gtksourceview branched for 2.20.

2007-09-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new gbrainy module.

2007-09-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: stringfrozen property removed from gnome-utils
	HEAD.

2007-09-02  Johannes Schmid <jhs@gnome.org>

	* gnome-modules-xml.in:
	* releases.xml.in:

	gnome-utils branched for gnome-2-20

2007-09-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added goffice bugs-product property.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added path for release-notes SVN.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added 2.20 release notes doc.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* templates/header.tmpl:
	* data/foot-16.png: Added GNOME foot icon in URLs.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added missing goffice module.

2007-08-30  Danilo Šegan  <danilo@gnome.org>
