@@ -877,4 +877,9 @@
     <name>Dwayne Bailey</name>
     <email>dwayne@translate.org.za</email>
   </person>
+  <!-- io translation coordinator -->
+  <person id="mterry">
+    <name>Michael Terry</name>
+    <email>mike@mterry.name</email>
+  </person>
 </people>
