@@ -255,6 +255,12 @@
     <coordinator id="x-samueljongunnarsson"/>
     <webpage>http://www.techattack.nu/~gnome/</webpage>
   </team>
+  <team id="io">
+    <_language id="io">Ido</_language>
+    <coordinator id="mterry"/>
+    <mailing-list>gnome-ido@lists.mterry.name</mailing-list>
+    <mailing-list-subscribe>http://lists.mterry.name/listinfo.cgi/gnome-ido-mterry.name</mailing-list-subscribe>
+  </team>
   <team id="ig">
     <_language id="ig">Igbo</_language>
     <coordinator id="x-nwabunwanne"/>
