@@ -1,3 +1,10 @@
+2007-09-12  Johannes Schmid <jhs@gnome.org>
+
+	* translation-teams.xml.in:
+	* people.xml.in:
+
+	Added "io" translation team and coordinator
+
 2007-09-12  Danilo Šegan  <danilo@gnome.org>
 
 	* index.py (show_release): Add xmltemplate.
